--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
-  <body></body>
+
+  <body>
+    <header>
+
+    </header>
+
+    <main>
+      <h1>le main page</h1>
+
+    </main>
+    
+    <footer>
+
+    </footer>
+  </body>
 </html>
