--- a/index.html
+++ b/index.html
@@ -14,8 +14,16 @@
     </header>
 
     <main>
-      <h1>le main page</h1>
 
+      <h1>le main page</h1>
+      <div class="pair1"></div>
+      <section></section>
+
+      <div class="pair2"></div>
+      <section></section>
+
+      <div class="pair2"></div>
+      <section></section>
     </main>
     
     <footer>
