--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
 
     </header>
 
-    <main>
+    <main> 
+    <!-- section 1-->
       <div class="pair1"></div>
-      <section></section>
+      <section> 
+        <h1>this is so fetch</h1>
+      </section>
 
       <div class="pair2"></div>
       <section></section>
 
-      <div class="pair2"></div>
+      <div class="pair3"></div>
       <section></section>
     </main>
     
