--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
 
     <main> 
     <!-- section 1-->
-      <div class="pair1"></div>
-      <section> 
-        <h1>this is so fetch</h1>
+      <div class="fullscreen pair1">
+        <h1>text on img?</h1>
+      </div>
+      <section class="textContainer"> 
+        <p> dumb stuff sucks</p>
       </section>
 
-      <div class="pair2"></div>
-      <section></section>
+      <div class="fullscreen pair2"></div>
+      <section class="textContainer"></section>
 
       <div class="pair3"></div>
       <section></section>
