--- a/index.html
+++ b/index.html
@@ -16,17 +16,23 @@
     <main> 
     <!-- section 1-->
       <div class="fullscreen pair1">
-        <h1>text on img?</h1>
+        <h1 id="title">text on img?</h1>
       </div>
       <section class="textContainer"> 
         <p> dumb stuff sucks</p>
       </section>
-
+      
+      <!-- section 2-->
       <div class="fullscreen pair2"></div>
-      <section class="textContainer"></section>
+      <section class="textContainer">
+        <p>dumb stuff 2</p>
+      </section>
+
 
       <div class="pair3"></div>
-      <section></section>
+      <section>
+        <p>idk</p>
+      </section>
     </main>
     
     <footer>
